--- a/gym.html
+++ b/gym.html
@@ -171,13 +171,11 @@
     </div>
 
     <div class="branding">
-      <p><strong>Creating the Brand Identity: </strong>Since the goal is to inspire users to achieve their fitness goals, Gymseeker
-        needed a color palette and logo that would evoke a feeling of energy and
-        motivation.
-
-        I also took in consideration of icons for Gymseeker in order to help grab the attention and help users easily scan content.
+      <p><strong>Creating the Brand Identity: </strong> To build the product's brand, I started off with a mind map to branch off my ideas for a logo design.
+        Since the goal is to inspire users to achieve their fitness goals, Gymseeker needed a color palette and a logo that would evoke a feeling of energy and
+        motivation. Yellow and orange first came to mind, but I chose the color blue for its feeling prowess and strengths.
       </p>
-
+      <img src="images/gymseeker/mind.jpg">
       <img src="images/gymseeker/brand.png">
 
     </div>
@@ -198,7 +196,7 @@
 <section class="usability">
   <div id="usability_container">
     <h1>USABILITY TESTING </h1>
-    <p> After multiple iterations from the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
+    <p> After multiple iterations of the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
       I presented the application to four different testers.  <b>These are three separate tasks I had users complete:</b> </p>
 
     <div class="highlights">
@@ -227,7 +225,7 @@
       <img src="images/gymseeker/map_user_test.png">
 
       <p><strong>Navigation Test:</strong> To test out my assumption that users have no trouble navigating to the list view and purchasing a membership,
-      I created a navigation test on usabilityhub.com and was able to generate more than 25 responses. <a href="https://usabilityhub.com/tests/8383bdc11445/results/ac9b60656eab" target="_blank"> <b>Click here to view the test results.</b> </a> </p>
+      I created a navigation test on usabilityhub.com and was able to generate 36 responses. <a href="https://usabilityhub.com/tests/8383bdc11445/results/ac9b60656eab" target="_blank"> <b>Click here to view the test results.</b> </a> </p>
 
       <div class="highlights">
         <ul>
@@ -248,7 +246,7 @@
 
 <section class="visual">
   <div id="visual_container">
-    <h1>VISUAL DESIGN</h1>
+    <h1>ANNOTATED PROTOTYPES</h1>
     <img src="images/gymseeker/visual.png">
   </div>
 
