--- a/ridestarter.html
+++ b/ridestarter.html
@@ -134,11 +134,9 @@
         </ul>
       </div>
 
-      <p> The data revealed the users' attitudes and motives towards donating. Based from the survey, there seems
-        to be major theme of users skeptical of how exactly their money will make an impact.
-        From analyzing the survey, it was safe to conclude that users typically make a one-time donation to friends or family.
-        These results were important in deciding not only the features of Ridestarter, but also what
-        was necessary in order to create a successful and trusting crowdfunding application.   </p>
+      <p> <strong> Data Insights: </strong>The data revealed the users' attitudes and motives towards donating. Based on the survey, there seems
+        to be theme of users not knowing how much of an impact their donation will make or if they should trust the fundraiser. These results were important in deciding not only the features of Ridestarter, but also to design a transparent and
+        trusting crowdfunding application. The goal here is to gain trust from donors so they can appreciate the value of their donation. </p>
       <img src="images/ridestarter/survey.png">
 
 
@@ -147,8 +145,8 @@
     <div class="competitive_analysis">
       <p><strong> Competitive Analysis: </strong> I analyzed four different crowdfunding companies in order to find out more about how
         they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
-        features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
-        it was important that the application contains features unique to charity bike rides as well as some of the
+        features - progress meter and donation goals. Because Ridestarter is a crowdfunding source for charity bike rides,
+        it was important that the application contains features unique to cycling as well as some of the
           important crowdfunding elements such as a progress bar and fundraising goal.<a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
           You can take a closer look of the competitive analysis here. </a> </p>
 
@@ -210,59 +208,52 @@
   <div class="container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing">
-      <p> <strong>Usability Testing:</strong> User testing was important to gather either design feedback or any errors that user experienced.
-        For this process, I conducted both a contextual interview on four different users and an unmoderately usability testing on usertesting.com
-         to get feedback on the clickable prototypes that I created in InVision. These are some of the guiding questions that I asked
-        during the testing as they navigate through the website: </p>
+      <p> <strong>Moderated and Unmoderated Testing: </strong> I recruited 3 participants to . Testing revealed that my design     </p>
       <div class="highlights">
         <ul>
-          <li> Look at the homepage. What do you think this website is about? </li>
-          <li> Starting from the landing page, find a charity project and make a donation. </li>
-          <li> How do you feel about the checkout process? Do you feel it is intuitive and trustworthy? </li>
-      </ul>
-    </div>
-
-    <div class="highlights">
-      <ul>
-        <li> For the first set of user testings, I reached out to some of my colleagues
-          and and had them review my design in-person. Some of the feedback I recieved varied from things such as adjusting sizes
-          in certain elements or changing the color of the call to action.
-
-        <li> Some users pointed out that when they wanted to navigate back to
-          My Account from the Creating a Fundraiser page, there were no option to do that unless you
-          click on My Account on the navigation bar. To ensure a successful user experience, I added a back button both on the Creating a
-          Fundraiser page and Guest Checkout page.  </li>
-
-         <li> When users were donating, I noticed that there was a delay in deciding the donation amount. To speed up this process, I added four
-           amount options for users to choose from ($5, $7, $10, $15). This also solves the pain point of users who are financially unfortunate by easing them
-           into fixed donation amounts that are not too high.
-         </li>
-
-          <li> In addition to testing in-person, I conducted an unmoderated remote usability testing on usertesting.com.
-          The insight I gained from this method was valuable to eliminate any chance of biases. From the testing,
-          the user quickly identified the landing page as crowdfunding page for charity bike rides. Judging from the hero image,
-          the user thought that site is about a sporting company advertising their clothing brand. But later thought otherwise after reading some of the texts
-          and scrolling down the page. After reviewing the landing page, users were then asked to make a donation starting from the homepage. As
-          they navigate through a charity project, users liked the destination map as it gives them a visual idea of how far
-          the ride would be. <a href="http://www.usertesting.com/v/0c0394a6-83ea-4a11-bedf-8691164ae105?encrypted_video_handle=ecowOnepaNaXBz98erLumg&shared=OLoy9ZlW" target='_blank'> View the video here!</a> </li>
+          <li> What's your first impression of the homepage? What do you think this website is about? </li>
+          <li> You are a veteran donor and would like to make a donation to a charity. Starting
+          from the homepage, how would you find a charity bike project and make a donation? </li>
+          <li> How do you feel about this crowdfunding application? What do you like or dislike, if any? </li>
         </ul>
-    </div>
+      </div>
 
-    <div class="iteration_images">
-      <img src="images/ridestarter/button_iteration.png">
-      <p> Addressing the CTA's color and directory to charity page </p>
-    </div>
+      <p> <strong> Click Testing: </strong> Disclosing reputation and personal information were important
+        for potential donors to empathize with the fundraisers and make a donation. However, I knew I was struggling with users intuitively navigating to the
+        fundraiser's profile page. By gathering more than 20 responses for a click test, my assumption was wrong as majority of testers clicked on the correct element (creator's image).
+        However, I wanted to make the display more obvious for the outliers by adding a small button under the fundraiser's name to view their profile.</p>
 
-    </div>
+      <img src="images/ridestarter/click.png">
+
   </div>
 
   </div>
 
-  <div class="final_container">
-    <p><strong>High-Fidelity Prototypes: </strong> With the insights gained from user research and usability testing, Ridestarter was solidified with
-      multiple sought out iterations, transforming it into high-fidelity prototypes. <a href="https://invis.io/Z2D6DKKTY" target="_blank">
-        You can check out Ridestarter's interactive prototype here. </a></p>
-    <img src="images/ridestarter/ridestarter_high.jpg">
+</section>
+
+<section class="annotation">
+  <div class="container">
+    <h1>Annotated Prototypes</h1>
+
+    <div class="annotate_charity">
+      <p><strong>Charity Page View:</strong> The main charity page follows a minimum viable product based from the
+        user research. Essential elements are displayed to ease the users in interacting with a bike charity page.
+        </p>
+      <img src="images/ridestarter/test.png">
+    </div>
+
+    <div class="annotate_discover">
+      <p><strong>Filtering and Sorting System:</strong> With many crowdfunding projects out there, this streamlined filtering and
+      sorting system allow for users to tailor down the specific projects of their choice. </p>
+      <img src="images/ridestarter/discover.png">
+    </div>
+
+    <div class="annotate_convey">
+      <p><strong>Conveying Reputation:</strong> Based on the user research, one of the main factors in users not
+      committing to a donation is being unsure of the fundraiser's trustworthiness. Donors must feel safe donating to creators so
+    it's important to also focus on the project owner's credibility.  </p>
+      <img src="images/ridestarter/reputation.png">
+    </div>
   </div>
 
 </section>
