--- a/gym.html
+++ b/gym.html
@@ -139,7 +139,7 @@
 
         <img src="images/gymseeker/survey_findings.png">
 
-        <p> With the discoveries I found through my survey, I was able to uncover the users' goals and pain points.
+        <p> <strong>Data Insights: </strong>With the discoveries I found through my survey, I was able to uncover the users' goals and pain points.
           It was clear that the main frustration with gyming has to do with convenience and time. With that said,
            I wanted to ease the users' pain in finding a gym by providing
            them with essential gym elements such as price, location, and amenities.
@@ -162,23 +162,17 @@
     <h1> RUNNING THROUGH THE DESIGN CHOICES </h1>
 
     <div class="user_flow">
-      <p><strong>Information Architecture:</strong> After getting a better insight of my users, I could move foward on user stories and user flows.
-      Basing off from the research, I created user stories and made four user flows that are essential to crafting the important features and screens for
+    <p><strong>Site Map:</strong> After getting a better insight of the users, I could move on to create information architecture. To plan out
+    the structure of Gymseeker, I created a sitemap to use as a reference point for the creation of wireframes and functional specifications.  </p>
+    <img src="images/gymseeker/sitemap.png">
+
+    <p><strong>User Flow:</strong> Based from the research, I also created user stories and made four user flows that are essential to crafting the important features and screens for
     Gymseeker. <a href="https://docs.google.com/spreadsheets/d/123lRp0UdWpR_rVzesVuoIFh29WfpIlTxFjVp7_xMhrc/edit?usp=sharing" target="_blank">
     <b> Click here to view the user stories. </b> </a> </p>
 
       <img src="images/gymseeker/user_flow.png">
     </div>
 
-    <div class="branding">
-      <p><strong>Creating the Brand Identity: </strong> To build the product's brand, I started off with a mind map to branch off my ideas for a logo design.
-        Since the goal is to inspire users to achieve their fitness goals, Gymseeker needed a color palette and a logo that would evoke a feeling of energy and
-        motivation. Yellow and orange first came to mind, but I chose the color blue for its feeling prowess and strengths.
-      </p>
-      <img src="images/gymseeker/mind.jpg">
-      <img src="images/gymseeker/brand.png">
-
-    </div>
 
     <div class="low">
       <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and then transfered it to clickable
@@ -187,6 +181,15 @@
       are some of the initial sketches: </p>
 
       <img src="images/gymseeker/low.png">
+    </div>
+
+    <div class="branding">
+      <p><strong>Creating the Brand Identity: </strong> To build the product's brand, I started off with a mind map to branch off my ideas for a logo design.
+        Since the goal is to inspire users to achieve their fitness goals, Gymseeker needed a color palette and a logo that would evoke a feeling of energy and
+        motivation. Yellow and orange first came to mind, but I chose the color blue for its feeling of prowess and strengths.
+      </p>
+      <img src="images/gymseeker/mind.jpg">
+      <img src="images/gymseeker/brand.png">
     </div>
 
 
@@ -261,7 +264,7 @@
     <div id="conclusion_container">
     <h1><span class="underline_black"> CONCLUSION</span></h1>
     <p> Gymseeker is a project that I am particularly passionate about.
-      As a fitness enthusiast who frequent the weight room, I have only considered
+      As a fitness enthusiast who frequents the weight room, I have only considered
       locating gyms based on what types of equipments a gym has in their
       weight room. With Gymseeker, users are presented with a holistic detail of a gym's profile before
       making a commitment to purchasing a membership.  </p>
