--- a/ridestarter.html
+++ b/ridestarter.html
@@ -208,7 +208,8 @@
   <div class="container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing">
-      <p> <strong>Moderated and Unmoderated Testing: </strong> I recruited 3 participants to . Testing revealed that my design     </p>
+      <p> <strong>Moderated and Unmoderated Testing: </strong> I recruited 3 participants to conduct a moderated user testing and one tester for an unmoderated remote usability testing on usertesting.com.
+         Testing revealed that users were able to intuitively navigate through the process of onboarding and making a donation.   </p>
       <div class="highlights">
         <ul>
           <li> What's your first impression of the homepage? What do you think this website is about? </li>
@@ -220,7 +221,7 @@
 
       <p> <strong> Click Testing: </strong> Disclosing reputation and personal information were important
         for potential donors to empathize with the fundraisers and make a donation. However, I knew I was struggling with users intuitively navigating to the
-        fundraiser's profile page. By gathering more than 20 responses for a click test, my assumption was wrong as majority of testers clicked on the correct element (creator's image).
+        fundraiser's profile page. By gathering more than 50 click test responses, my assumption was wrong as majority of testers clicked on the correct element (creator's image).
         However, I wanted to make the display more obvious for the outliers by adding a small button under the fundraiser's name to view their profile.</p>
 
       <img src="images/ridestarter/click.png">
