--- a/gym.html
+++ b/gym.html
@@ -218,7 +218,7 @@
       <div class="highlights">
         <ul>
           <li> <b> Gymseeker's goal was easily identified: </b> Users didn't take long to understand the application's goal, providing many similarities to other apps such as Yelp. </li>
-          <li> <b> Option to view weekly schedule: </b> One of the users wanted to look at the weekly schedule, but couldn't find an option to do so. I created a call to action in the gym's profile  </li>
+          <li> <b> Option to view weekly schedule: </b> One of the users wanted to look at the weekly schedule, but couldn't find an option to do so. I created a call to action in the gym's profile for users to view the gym hours.  </li>
           <li> <b> Map view over list view </b> I noticed that users tend to stay on the map view and didn't notice the list view option until otherwise mentioned. To fix this, I made both the map and list view options bigger and tested
           again with different users. </li>
           <li> <b> Unmoderated remote testing: </b> Buying a membership is easy, quick, and intuititve. Participant said "takes the fuss out of trying to find a gym, anything on their website, or calling anyone" <a href="http://www.usertesting.com/v/a0f49f57-2259-4f8b-974a-d9839e50ca66?encrypted_video_handle=Eknu2wIOpzipDgTimemuJA&shared=pHvYGqsZ" target="_blank"> View the video here </a></li>
