--- a/gym.html
+++ b/gym.html
@@ -55,7 +55,7 @@
     <h2 id="research"> RESEARCH </h2>
     <h2 id="design"> DESIGN </h2>
     <h2 id="implementation"> USABILITY TESTING</h2>
-    <h2 id="visual">VISUAL DESIGN </h2>
+    <h2 id="visual">ANNOTATION </h2>
     <h2 id="conclusion"> CONCLUSION </h2>
   </nav>
 
@@ -64,7 +64,7 @@
     <div id="summary_container">
       <h1> <span class="underline_black">SUMMARY</span> </h1>
       <p> Today, defining and maintaining fitness is open to interpretation. Whether that be health, sports, or recreational
-      activities. Gymseeker seeks to assist users in finding the perfect gym to achieving their desired fitness goal.</p>
+      activities, Gymseeker seeks to assist users in finding the perfect gym to achieving their fitness goals.</p>
 
       <img src="images/gymseeker/summary.png">
 
@@ -79,11 +79,11 @@
     </h4>
 
     <h4 class="deliver"> Methods <hr>
-      <p> UX Research, Personas, Contextual Interviews, Competitive Analysis, Usability Testing, User Stories, Wireframes, Navigation Test </p>
+      <p> UX Research, User Stories, User Flow, Sitemap, Personas, Contextual Interviews, Competitive Analysis, Usability Testing, Wireframes, Navigation Test </p>
     </h4>
 
     <h4 class="deliver"> Tools <hr>
-      <p> Sketch, Balsamiq, Photoshop, Illustrator, Invision, Usertesting.com </p>
+      <p> Sketch, Balsamiq, Photoshop, Illustrator, Invision, Usertesting.com, UsabilityHub </p>
     </h4>
   </section>
 
@@ -99,12 +99,13 @@
     <div class="solution_container">
       <h1> <span class="underline_black">SOLUTION</span></h1>
       <p>Gymseeker makes the process of finding a gym easier by streamlining the research and selection phase based on the users'
-        needs. Users can search for gyms based on location, and view gym's profile before making a commitment to purchasing a membership.  <a href="https://invis.io/TUEP5Y8D9" target="_blank"><b> View the clickable prototypes here.</b> </a> </p>
+        needs. Users can search for gyms based on location and view gym's profile before making a commitment to purchasing a membership.  <a href="https://invis.io/TUEP5Y8D9" target="_blank"><b> View the clickable prototypes here.</b> </a> </p>
     </div>
   </section>
 
   <section class="research">
     <div class="container">
+      <h5>Exploring the requirements</h5>
       <h1> WORKING OUT ON THE RESEARCH </h1>
 
       <div class="survey_findings">
@@ -133,7 +134,7 @@
             <li> 51.2% of respondents are currently on a monthly membership plan </li>
             <li> 43.9% of respondents attested that the weight room is the most important amenity </li>
             <li> Location (85.4%), price (82.9%), and amenities/services (56.1%) are the three most important things when choosing a gym </li>
-            <li> When asked what deters you from going ot the gym, most respondents answered exhaustion and overcrowding</li>
+            <li> When asked what deters you from going to the gym, most respondents answered exhaustion and overcrowding</li>
           </ul>
         </div>
 
@@ -141,12 +142,12 @@
 
         <p> <strong>Data Insights: </strong>With the discoveries I found through my survey, I was able to uncover the users' goals and pain points.
           It was clear that the main frustration with gyming has to do with convenience and time. With that said,
-           I wanted to ease the users' pain in finding a gym by providing
-           them with essential gym elements such as price, location, and amenities.
+           I wanted to ease the users' pain in finding a gym by providing them with essential gym elements such as price, location, and amenities.
       </div>
 
       <div class="personas">
-        <p><strong>Personas: </strong>To gain a better understanding of what specific features were desired, I complied my research from both the survey and in-person
+        <p><strong>Personas: </strong>To gain a better understanding of what specific features were desired and what kind of people are likely to
+          use Gymseeker, I complied my research from both the survey and in-person
         interview to create three different user personas: Avid gym-goer, occasional gym-goer, and amateur gym-goer. These personas will guide me to
         design an intuitive flow for Gymseeker. </p>
         <img src="images/gymseeker/Mark.png" class="enlarge">
@@ -159,6 +160,7 @@
 
 <section class="design_choices">
   <div class="container">
+    <h5> The framework </h5>
     <h1> RUNNING THROUGH THE DESIGN CHOICES </h1>
 
     <div class="user_flow">
@@ -175,10 +177,10 @@
 
 
     <div class="low">
-      <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups on Balsamiq and then transfered it to clickable
-        prototypes with InVision. I tested the prototyes in-person with a few friends and some people from my local gym. Some minor feedback includes making the filter button
+      <p><strong> Low-Fidelity Wireframes: </strong>With the completed user stories and user flows, I created low-fidelity mockups with Balsamiq and then transfered it to clickable
+        prototypes using InVision. I tested the prototyes in-person with a few friends and some folks from my local gym. Some minor feedback includes making the filter button
         functional or changing the layout of certain elements. Taking in consideration of the feedback, I moved forward to creating high-fidelity wireframes. These
-      are some of the initial sketches: </p>
+        are some of the initial lo-fi sketches: </p>
 
       <img src="images/gymseeker/low.png">
     </div>
@@ -186,7 +188,7 @@
     <div class="branding">
       <p><strong>Creating the Brand Identity: </strong> To build the product's brand, I started off with a mind map to branch off my ideas for a logo design.
         Since the goal is to inspire users to achieve their fitness goals, Gymseeker needed a color palette and a logo that would evoke a feeling of energy and
-        motivation. Yellow and orange first came to mind, but I chose the color blue for its feeling of prowess and strengths.
+        motivation. Yellow and orange first came to mind, but I chose the color blue to represent the feeling of prowess and strength.
       </p>
       <img src="images/gymseeker/mind.jpg">
       <img src="images/gymseeker/brand.png">
@@ -198,8 +200,9 @@
 
 <section class="usability">
   <div id="usability_container">
-    <h1>USABILITY TESTING </h1>
-    <p> After multiple iterations of the low-fidelity mockups, I conducted a usability test using the the high-fidelity clickable prototypes.
+    <h5>Usability Testing</h5>
+    <h1>uncovering the importance of fitness </h1>
+    <p> After multiple iterations of the low-fidelity mockups, I conducted a usability test using the high-fidelity clickable prototypes.
       I presented the application to four different testers.  <b>These are three separate tasks I had users complete:</b> </p>
 
     <div class="highlights">
@@ -249,7 +252,10 @@
 
 <section class="visual">
   <div id="visual_container">
-    <h1>ANNOTATED PROTOTYPES</h1>
+    <h5> Annotation </h5>
+    <h1>Promoting an active lifestyle</h1>
+    <p><strong>Key Screens:   </strong>Some of the key screens below inform the design-making in helping
+    users accomplish their fitness goals much easier. </p>
     <img src="images/gymseeker/visual.png">
   </div>
 
