--- a/ridestarter.html
+++ b/ridestarter.html
@@ -52,6 +52,7 @@
   <h2 id="research"> RESEARCH </h2>
   <h2 id="design"> DESIGN </h2>
   <h2 id="implementation"> USABILITY TESTING</h2>
+  <h2 id="annotation"> ANNOTATION</h2>
   <h2 id="conclusion"> CONCLUSION </h2>
 </nav>
 
@@ -99,6 +100,7 @@
 
 <section class="research">
   <div class="container">
+    <h5>Exploring the requirements </h5>
     <h1> RESEARCHING THE CHALLENGES  </h1>
 
     <div class="survey_findings">
@@ -136,7 +138,8 @@
 
       <p> <strong> Data Insights: </strong>The data revealed the users' attitudes and motives towards donating. Based on the survey, there seems
         to be theme of users not knowing how much of an impact their donation will make or if they should trust the fundraiser. These results were important in deciding not only the features of Ridestarter, but also to design a transparent and
-        trusting crowdfunding application. The goal here is to gain trust from donors so they can appreciate the value of their donation. </p>
+        trusting crowdfunding application. The goal here is to <strong>build trust through transparency</strong> so donors can appreciate the value of their donation and
+      <strong>make an impact</strong> to the community. </p>
       <img src="images/ridestarter/survey.png">
 
 
@@ -167,9 +170,14 @@
 
   <section class="design_choices">
     <div class="container">
+      <h5> The Framework </h5>
       <h1> RIDING THROUGH THE DESIGN CHOICES </h1>
 
       <div class="user_flow">
+        <p><strong>Site Map:</strong> Before touching on the wireframes, I wanted to ensure the clarity of Ridestarter's goals and structures, I created a detailed sitemap to guide me through the
+          later design process. 
+        <img src="images/ridestarter/sitemap.png">
+
         <p><strong>User Flow:</strong> Based on the user research, I finalized four user stories that I believe
           are important for users to navigate through their goals in Ridestarter:
           Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign. This detaied information
@@ -206,7 +214,8 @@
 
 <section class="implementation">
   <div class="container">
-    <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
+    <h5> Usability testing </h5>
+    <h1> building trust through transparency</h1>
     <div class="user_testing">
       <p> <strong>Moderated and Unmoderated Testing: </strong> I recruited 3 participants to conduct a moderated user testing and one tester for an unmoderated remote usability testing on usertesting.com.
          Testing revealed that users were able to intuitively navigate through the process of onboarding and making a donation.   </p>
@@ -222,7 +231,7 @@
       <p> <strong> Click Testing: </strong> Disclosing reputation and personal information were important
         for potential donors to empathize with the fundraisers and make a donation. However, I knew I was struggling with users intuitively navigating to the
         fundraiser's profile page. By gathering more than 50 click test responses, my assumption was wrong as majority of testers clicked on the correct element (creator's image).
-        However, I wanted to make the display more obvious for the outliers by adding a small button under the fundraiser's name to view their profile.</p>
+        However, I wanted to further emphasize on the fundraiser's reputation. So I added another profile avenue for the outliers by creating a small button under the fundraiser's name to view their profile.</p>
 
       <img src="images/ridestarter/click.png">
 
@@ -234,7 +243,8 @@
 
 <section class="annotation">
   <div class="container">
-    <h1>Annotated Prototypes</h1>
+    <h5> Annotation </h5>
+    <h1>Making an impact together as one</h1>
 
     <div class="annotate_charity">
       <p><strong>Charity Page View:</strong> The main charity page follows a minimum viable product based from the
