--- a/gym.html
+++ b/gym.html
@@ -23,7 +23,6 @@
   gtag('config', 'UA-108806471-1');
 </script>
 
-
 </head>
 
 <body>
@@ -275,7 +274,7 @@
       weight room. With Gymseeker, users are presented with a holistic detail of a gym's profile before
       making a commitment to purchasing a membership.  </p>
 
-    <p> For this application, I delved deeper in the user testing process and made many iterations based on
+    <p> For this iOS application, I delved deep in the user testing process and have made many iterations based on
       feedback. In future development of the current product and due to time constraints, I would consider an additional feature that allows users to
     sort through the different types of gym - Yoga center, dance center, athlethic clubs, etc. This would provide users with a
     comprehensive direction to filter through their fitness goals. </p>
