--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <title>Ekkalux Nguyen</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/homepage.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/hover.css">
@@ -23,147 +23,106 @@
   gtag('config', 'UA-108806471-1');
 </script>
 
+<link rel="icon" href="images/logo.png" type="image/gif" sizes="16x16">
 
 </head>
 
+<header>
+  <div class="nav">
+    <div class="nav_container">
+      <div class="name">
+        <img id="logo" src="images/logo.png" width="60" height="60">
+      </div>
+      <div class="links">
+        <a href="index.html" class="active">PORTFOLIO </a>
+        <a href="about.html">ABOUT</a>
+        <a href="Resume.pdf" target="_blank">RESUME</a>
+      </div>
+    </div>
+  </div>
+</header>
+
 <body>
-
 <section class="hero">
-
-  <div class="top_button_container">
-    <a href="Resume.pdf" target="_blank"><button class="button">Resume </button></a>
-    <button class="button_contact">Contact </button>
+  <div class="container">
+    <h2> HELLO! MY NAME IS </h2>
+    <h1> EKKA<span class="lux">LUX</span> NGUYEN <span style="color:#C2C2C2">&</span> I'M A DESIGNER</h1>
+    <p> I am an enthusiastic UX Designer based in San Francisco who specializes in crafting web and mobile applications
+       through an end-to-end human-centric process. I enjoy creating effortless user experience
+       and designing clean and modern products. I am currently an Operation Specialists at <a href="https://squareup.com/" target="_blank">Square</a>,
+       seeking to transition into a full-time opportunity in Product Design.
+       Read more about me <a href="about.html">here</a> or check out my recent projects right below. </p>
+    <p class="scroll"> SCROLL FOR MORE</p>
+    <i class="fa fa-arrow-down fa-md"></i>
   </div>
-
-  <div class="hero_container">
-    <h1>EKKALUX NGUYEN</h1>
-    <p>I am a UI/UX designer based in San Francisco passionate about
-    creating beautiful and intuitive user experiences. </p>
-
-    <div class="middle_button_container">
-      <button class="button">About Me</button>
-    </div>
-
-    <div class="arrow_down_container">
-      <i class="fa fa-angle-double-down fa-4x"></i>
-    </div>
-  </div>
-
 </section>
 
 
 <section class="projects">
-  <h1> PROJECTS </h1> <hr>
-  <div class="project_container">
-
-
-    <div class="gym">
-      <img src="images/gym.png" class="hvr-hang">
-      <div class="gym_text">
-        <h1> GymSeeker </h1>
-        <h2> UX Research | Interaction Design | Brand Identity </h2>
-        <p> An iOS application that helps users find and locate gyms based on location, eliminating the pain of
-        arduous searches for a suitable gym online.  </p>
-        <div class="gym_button">
-          <a href="gym.html"><button class="button_projects">Case Study</button></a>
-          <a href="https://invis.io/GMEND32KB" target="_blank"><button class="button_gym">Prototype</button></a>
+  <div class="container2 image_holder">
+        <a href="equipax.html">
+          <img src="images/equipax.png">
+        <div class="overlay centered full-width-height" style="background: #3F0609;">
+          <div class="centered" style="text-align: center">
+              <p style="color: white"> EQUIPAX<br />
+                  Web Application
+              </p>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <div class="ridestarter_container">
-      <img src="images/ridestarter_laptop.jpg" class="hvr-hang">
-      <div class="ridestarter_text">
-        <h1> Ridestarter </h1>
-        <h2> UX Research | Interaction Design | Brand Identity </h2>
-        <p> A crowdfunding web application for organizations and individuals
-        looking to either raise funds or donate to charity bike rides. </p>
-        <div class="ridestarter_button">
-          <a href="ridestarter.html"><button class="button_projects">Case Study</button></a>
-          <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_projects">Prototype</button></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="simplebox_container">
-      <img src="images/simplebox_cover.jpg" class="hvr-hang">
-      <div class="simplebox_text">
-        <h1> Simplebox </h1>
-        <h2> UX Research | UX Design | Responsive Web Design </h2>
-        <p> A SaaS web application that allows users to collect information and store it in a centralized location.</p>
-        <div class="simplebox_button">
-          <a href="simplebox.html"><button class="button_projects">Case Study</button></a>
-          <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_projects">Prototype</button></a>
-          <a href="https://ekkalux.github.io/simpleBox/" target="_blank"><button class="button_projects">Front-End</button></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="more_projects">
-      <img src="images/more_projects/more_projects.png" class="hvr-hang">
-      <div class="more_projects_text">
-        <h1> More Projects </h1>
-        <h2> UI Design | Brand Identity | Graphic Design </h2>
-        <p> Other projects that includes user interface design, branding, and newsletter work. </p>
-        <div class="more_projects_button">
-          <a href="more_projects.html"><button class="button_projects">View More</button></a>
-        </div>
-      </div>
-    </div>
-
-
-</section>
-
-<section class="about">
-  <div class="about_container">
-    <h1> ABOUT </h1> <hr id="hr_about"> </hr>
-    <div class="about_left">
-      <h2> <b>Hello! My name is Ekkalux or Lux, committed to uncovering people's stories through
-        the crafting of intuitive design solutions</b>  </h2>
-
-      <p> Growing up, I have always had a deep appreciation for how the human mind works.
-        Asking questions like what makes us tick and why do we do things the way we do, I was fascinated by the
-        mystery in uncovering human behavior. The opportunity to listen, empathize, and learn inspire me to leap into the world of UX design. </p>
-
-       <p> <b>My journey to become a UX designer</b> started during my undergraduate career at UC Berkeley. I was involved
-         in many different organizations, helping to design graphic materials - prints, ads, and newsletters. But I didn’t
-         want to just design; I wanted to use my passion in design to help people with their problems and see the
-         positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
-         intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
-         plan, and deliver effective design solutions.
-
-         <p> <b>I am here to make the world a better place!</b> With a strong affinity for creating
-         products that bridge the gap between technology, health, fitness, and entertainment, I hope to strategize
-         simple, yet user-centric solutions to solve complex problems. When I'm not designing,
-         I enjoy hiking, traveling, hitting my personal records at the gym, having great conversations, and keeping up with the
-         latest UX trends. I'm huge on personal development so I'm always open to new opportunities
-         that help me maintain a good work-life balance.
-         Shoot me an email at <a href="mailto:ekkalux_414@berkeley.edu">
-          ekkalux_414@berkeley.edu</a> or get in touch with me right below! </p>
-     </div>
+        </a>
   </div>
+
+  <div class="container2 image_holder">
+        <a href="gymseeker.html">
+          <img src="images/gym.png">
+        <div class="overlay centered full-width-height" style="background: #133A55;">
+          <div class="centered" style="text-align: center">
+              <p style="color: white"> GYMSEEKER <br/>
+                  Mobile Application
+              </p>
+          </div>
+        </div>
+        </a>
+  </div>
+
+  <div class="container2 image_holder">
+        <a href="ridestarter2.html">
+          <img src="images/ridestarter.png">
+        <div class="overlay centered full-width-height" style="background: #0F750F;">
+          <div class="centered" style="text-align: center">
+              <p style="color: white"> RIDESTARTER<br/>
+                  Web Application
+              </p>
+          </div>
+        </div>
+        </a>
+  </div>
+
+  <div class="container2 image_holder">
+        <a href="simplebox.html">
+          <img src="images/simplebox.png">
+        <div class="overlay centered full-width-height" style="background: #30485F;">
+          <div class="centered" style="text-align: center">
+              <p style="color: white"> SIMPLEBOX <br />
+                  Web Application
+              </p>
+          </div>
+        </div>
+        </a>
+  </div>
+
 </section>
 
-<section class="contact">
-  <h1> CONTACT </h1> <hr class="contact_hr">
-  <div class="contact_container">
-    <p> I love to connect and meet new people. Feel free to get in touch with me if you have
-      opportunities for projects or open positions! I am also open to relocation. </p>
-
+<section class="footer">
+  <div class="container3">
     <div class="icons">
         <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-f fa-lg"></i></a>
         <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin fa-lg"></i></a>
         <a href="mailto:ekkalux_414@berkeley.edu"><i class="fa fa-envelope fa-lg"></i></a>
-        <a href="https://github.com/ekkalux"><i class=" fa fa-github fa-lg"></i></a>
+        <a href="https://github.com/ekkalux"><i class="fa fa-github fa-lg"></i></a>
     </div>
-
-    <div class="bottom">
-      <p>© 2017 Ekkalux Nguyen | Designed and Developed by Ekkalux Nguyen </p>
-    </div>
-
+    <p>Designed and developed with love by Ekkalux Nguyen</p>
   </div>
 </section>
-
-</body>
 
 </html>
