--- a/ridestarter.html
+++ b/ridestarter.html
@@ -73,7 +73,7 @@
   </h4>
 
   <h4 class="deliver"> Methods <hr>
-    <p> UX Research, Personas Contextual Interviews, Competitive Analysis, Usability Testing, User Stories, Wireframes </p>
+    <p> UX Research, Personas, Contextual Interviews, Competitive Analysis, Usability Testing, User Stories, Wireframes </p>
   </h4>
 
   <h4 class="deliver"> Tools <hr>
@@ -91,7 +91,7 @@
 
   <div class="solution_container">
     <h1> <span class="underline_black">SOLUTION</span></h1>
-    <p>The goal of Ridestarter is to centralize charity bike rides across the world and allow users to crowd-source
+    <p>Ridestarter seeks to centralize charity bike rides across the world and allow users to crowd-sourced
       for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
       together in supporting charity rides for causes they care about. <a href="https://invis.io/72E98NCE6" target="_blank"> View the clickable prototypes here. </a> </p>
   </div>
@@ -175,7 +175,7 @@
 
       <div class="user_flow">
         <p><strong>Site Map:</strong> Before touching on the wireframes, I wanted to ensure the clarity of Ridestarter's goals and structures, I created a detailed sitemap to guide me through the
-          later design process. 
+          later design process.
         <img src="images/ridestarter/sitemap.png">
 
         <p><strong>User Flow:</strong> Based on the user research, I finalized four user stories that I believe
