--- a/simplebox.html
+++ b/simplebox.html
@@ -274,7 +274,7 @@
 </section>
 
 <section class="visual">
-  <h1> VISUAL DESIGN </h1>
+  <h1> ANNOTATION </h1>
 
     <img src="images/simplebox/dashboard_annotating.png">
     <img src="images/simplebox/annotating_account.png">
